--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <img src="img/logo.jpg" alt="Site Logo" style="height:40px;">
+            <img src="img/header.png" alt="Site Logo" style="height:40px;">
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -68,9 +68,29 @@
 
     <!-- Page Banner Start -->
     <div class="container-fluid page-header py-5 mb-5"
-        style="background-image: url('img/BT-header.jpeg'); background-size: cover; background-position: center;">
-        <div class="overlay"></div>
+     style="background-color: #fff; position: relative;">
+
+  <div class="row align-items-center justify-content-center flex-column flex-md-row"
+       style="min-height: 60vh;">
+
+    <!-- Logo / Image -->
+    <div class="col-12 col-md-6 text-center mb-4 mb-md-0">
+      <img src="img/header.png"
+           alt="Bhagawati Timbers Logo"
+           style="width: 100%; max-width: 400px; height: auto;">
     </div>
+
+    <!-- Text -->
+    <div class="col-12 col-md-6 text-center px-4">
+      <h1 class="display-6 display-md-4" style="font-weight: bold; font-size: 6rem; font-family: 'Times New Roman', Times, serif;">
+        Bhagawati Timber's
+      </h1>
+      
+    </div>
+
+  </div>
+</div>
+
     <!-- Page Banner End -->
 
     <!-- Feature Start -->
