--- a/service.html
+++ b/service.html
@@ -48,7 +48,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <img src="img/logo.jpg" alt="Site Logo" style="height:40px;">
+            <img src="img/header.png" alt="Site Logo" style="height:40px;">
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -68,15 +68,15 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header py-5 mb-5"
-        style="background-image: url('img/wooden\ bg1.jpg'); background-size: cover; background-position: center;">
-        <div class="container-fluid py-5">
-            <div class="container text-center py-5">
-                <h1 class="display-3 text-dark brown mb-3 animated slideInDown">_Our Products_</h1>
+        <div class="container-fluid page-header py-5 mb-5"
+            style="background-image: url('img/wooden\ bg1.jpg'); background-size: cover; background-position: center;">
+            <div class="container-fluid py-5">
+                <div class="container text-center py-5">
+                    <h1 class="display-3 text-dark brown mb-3 animated slideInDown">_Our Products_</h1>
+                </div>
             </div>
+            <div class="overlay"></div>
         </div>
-        <div class="overlay"></div>
-    </div>
     <!-- Page Header End -->
 
 
