--- a/service.html
+++ b/service.html
@@ -288,12 +288,14 @@
         });
 
     </script>
+
+    <!-- Floating WhatsApp button -->
+    <a href="https://wa.me/919409440195?text=Hello%20Bhagawati%20Timber" target="_blank" rel="noopener noreferrer"
+        class="whatsapp-float" aria-label="Chat with us on WhatsApp">
+        <img class="whatsapp-icon" src="img/Whatsapp.png" alt="WhatsApp Chat">
+        <span class="whatsapp-label">Chat on WhatsApp</span>
+    </a>
+
 </body>
 
 </html>
-
-<!-- Floating WhatsApp button -->
-<a href="https://wa.me/917383199955?text=Hello%20Bhagawati%20Timber" target="_blank" rel="noopener noreferrer" class="whatsapp-float" aria-label="Chat with us on WhatsApp">
-    <img class="whatsapp-icon" src="img/Whatsapp.png" alt="WhatsApp Chat">
-    <span class="whatsapp-label">Chat on WhatsApp</span>
-</a>
