--- a/index.html
+++ b/index.html
@@ -77,29 +77,18 @@
     <!-- Navbar End -->
 
     <!-- Page Banner Start -->
-    <div class="container-fluid page-header py-5 mb-5"
-     style="background-color: #fff; position: relative;">
-
-  <div class="row align-items-center justify-content-center flex-column flex-md-row"
-       style="min-height: 60vh;">
-
-    <!-- Logo / Image -->
-    <div class="col-12 col-md-6 text-center mb-4 mb-md-0">
-      <img src="img/header.png"
-           alt="Bhagawati Timbers Logo"
-           style="width: 100%; max-width: 400px; height: auto;">
+    <div class="row align-items-center justify-content-center" style="min-height: 20vh;">
+        <!-- Logo / Image -->
+        <div class="col-12 col-md-6 text-center mb-4 mb-md-0 d-flex justify-content-center align-items-center">
+            <img src="img/header.png" alt="Bhagawati Timbers Logo" style="width: 100%; max-width: 300px; height: auto;">
+        </div>
+        <!-- Text -->
+        <div class="col-12 col-md-6 text-center px-4 d-flex justify-content-left align-items-center">
+            <h1 class="display-6 display-md-4" style="font-weight: bold; font-size: 2.8rem; font-family: 'Times New Roman', Times, serif; white-space: nowrap; color: #333; max-width: 500px; text-align: left;">
+                Bhagawati Timber's
+            </h1>
+        </div>
     </div>
-
-    <!-- Text -->
-    <div class="col-12 col-md-6 text-center px-4">
-      <h1 class="display-6 display-md-4" style="font-weight: bold; font-size: 6rem; font-family: 'Times New Roman', Times, serif;">
-        Bhagawati Timber's
-      </h1>
-      
-    </div>
-
-  </div>
-</div>
 
     <!-- Page Banner End -->
 
