--- a/quote.html
+++ b/quote.html
@@ -123,9 +123,9 @@
                                 <div class="col-12 col-sm-6">
                                     <select class="form-select border-0" style="height: 55px;">
                                         <option selected>Select A Service</option>
-                                        <option >Quotation</option>
-                                        <option >Products Details</option>
-                                        <option >Let's have a meeting</option>
+                                        <option value="Quotation">Quotation</option>
+                                        <option value="Products Details">Products Details</option>
+                                        <option value="Let's Meet">Let's meet</option>
                                     </select>
                                 </div>
                                 <div class="col-12">
@@ -259,7 +259,7 @@
             *Note:* ${note || 'N/A'}`;
 
                 // Organizer's WhatsApp number — change this!
-                const phoneNumber = '919409440195';
+                const phoneNumber = '919427543402';
 
                 const whatsappURL = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
 
@@ -270,7 +270,7 @@
     </script>
 
     <!-- Floating WhatsApp button -->
-    <a href="https://wa.me/919409440195?text=Hello%20Bhagawati%20Timber" target="_blank" rel="noopener noreferrer"
+    <a href="https://wa.me/919427543402?text=Hello%20Bhagawati%20Timber" target="_blank" rel="noopener noreferrer"
         class="whatsapp-float" aria-label="Chat with us on WhatsApp">
         <img class="whatsapp-icon" src="img/Whatsapp.png" alt="WhatsApp Chat">
         <span class="whatsapp-label">Chat on WhatsApp</span>
