--- a/contact.html
+++ b/contact.html
@@ -131,6 +131,7 @@
                                 <div class="col-12">
                                     <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
                                 </div>
+                                
                             </div>
                         </form>
                     </div>
@@ -144,6 +145,16 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div>
+    <h2 style="text-align: center;">Reach out to us</h2>
+    <div class="contact-buttons">
+           
+        <button class="button" onclick="makeCall()">
+            <img src="/Bhagawati Timbet/img/call.png" style="width: 80px;"></button>
+        <button class="button" onclick="sendEmail()">
+            <img src="/Bhagawati Timbet/img/email.png" style="width: 80px;"></button>
+    </div>
     </div>
     <!-- Contact End -->
 
