--- a/contact.html
+++ b/contact.html
@@ -149,13 +149,15 @@
     <div>
     <h2 style="text-align: center;">Reach out to us</h2>
     <div class="contact-buttons">
-           
         <button class="button" onclick="makeCall()">
-            <img src="/Bhagawati Timbet/img/call.png" style="width: 80px;"></button>
+            <img src="/Bhagawati Timbet/img/call.png" style="width: 80px;" alt="Call">
+        </button>
         <button class="button" onclick="sendEmail()">
-            <img src="/Bhagawati Timbet/img/email.png" style="width: 80px;"></button>
+            <img src="/Bhagawati Timbet/img/email.png" style="width: 80px;" alt="Email">
+        </button>
     </div>
-    </div>
+</div>
+
     <!-- Contact End -->
 
 
