--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
             <img src="/Bhagawati Timbet/img/call.png" style="width: 80px;" alt="Call">
         </button>
         <button class="button" onclick="sendEmail()">
-            <img src="/Bhagawati Timbet/img/email.png" style="width: 80px;" alt="Email">
+            <img src="/Bhagawati Timbet/img/email_1.png" style="width: 80px;" alt="Email">
         </button>
     </div>
 </div>
