--- a/contact.html
+++ b/contact.html
@@ -146,14 +146,14 @@
             </div>
         </div>
     </div>
-    <div>
-    <h2 style="text-align: center;">Reach out to us</h2>
+    <div class="reach-out-section">
+    <h2>Reach out to us</h2>
     <div class="contact-buttons">
         <button class="button" onclick="makeCall()">
-            <img src="/Bhagawati Timbet/img/call.png" style="width: 80px;" alt="Call">
+            <i class="fa fa-phone-alt me-3"></i> Call Us
         </button>
         <button class="button" onclick="sendEmail()">
-            <img src="/Bhagawati Timbet/img/email_1.png" style="width: 80px;" alt="Email">
+            <i class="fa fa-envelope me-3"></i> Email Us
         </button>
     </div>
 </div>
